[project]
name = "pdf-extract"
version = "0.1.0"
description = "PDFからページを抽出するCLIツール"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pypdf>=6.6.0",
]

[project.scripts]
pdf-extract = "pdf_extract.main:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["pdf_extract"]

[tool.uv]
package = true
